# optipilot

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.controller  Dockerfile.forecaster  Makefile  README.md  docker-compose.yml  go.mod  project_context.md  project_statement.md  readme.md  report_code.txt
.github/: copilot-instructions.md
charts/optipilot/: Chart.yaml  README.md  values.schema.json  values.yaml
controller/: go.mod  go.sum  main.go  optipilot.yaml
deploy/: README.md
deploy/manifests/: configmap.yaml  controller-deployment.yaml  namespace.yaml  (+4 more)
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEMO.md  ML.md  OPERATIONS.md
forecaster/: .gitignore  Makefile  README.md  command.md  forecaster.yaml  pyproject.toml
forecaster/scripts/: query_cluster_dbs.sh  seed_cluster_forecaster_data.sh  seed_test_data.py  sync_proto.sh  test_retrain.py
forecaster/src/forecaster/: __init__.py  __main__.py  config.py  models.py
forecaster/src/forecaster/ml/: __init__.py  drift.py  features.py  inference.py  recalibration.py  scheduler.py  storage.py  trainer.py
forecaster/src/forecaster/server/: __init__.py  grpc_server.py  service.py
forecaster/src/forecaster/storage/: metrics.py  registry.py
loadtest/: run-all.sh
notes/: prerequisites.md
optipilot-forecaster/: README.md  app.py  autoscaling.py  demo_simulation.py  feature_engineering.py  generate_data.py  pyproject.toml  train_quantile_models.py
optipilot-forecaster/models/: predict.py
optipilot-frontend/: package.json  pnpm-lock.yaml
proto/: Makefile  README.md
services/: README.md
(+79 files in other folders)
